--- a/keycloak.yaml
+++ b/keycloak.yaml
@@ -46,7 +46,18 @@ spec:
       labels:
         app: keycloak
     spec:
-      containers:
+     # i will not speak
+     volumes:
+       - name: shared
+     containers:
+        - name: theme-holder
+          image: docker.io/debian:trixie
+          command: [ "/bin/bash", "-c", "--" ]
+          args: [ "while true; do sleep 30; done;" ]
+          volumeMounts:
+            - name: shared
+              mountPath: "/mnt/"
+  
         - name: keycloak
           image: quay.io/keycloak/keycloak:26.3.2
           args: ["start"]
@@ -120,6 +131,10 @@ spec:
             requests:
               cpu: 500m
               memory: 800Mi
+          volumeMounts:
+            - name: shared
+              mountPath: "/opt/keycloak/themes/"
+              readOnly: true
 ---
 # This is deployment of PostgreSQL with an ephemeral storage for testing: Once the Pod stops, the data is lost.
 # For a production setup, replace it with a database setup that persists your data.
