--- a/keycloak-ingress.yaml
+++ b/keycloak-ingress.yaml
@@ -1,7 +1,13 @@
+# tls: https://kubernetes.io/docs/concepts/services-networking/ingress/#tls
+# cert-manager/traefik: https://docs.vultr.com/how-to-install-traefik-ingress-controller-with-cert-manager-on-kubernetes
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: keycloak
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
   rules:
     - host: keycloak.sau-portal.de
@@ -14,3 +20,8 @@ spec:
                 name: keycloak
                 port:
                   number: 8080
+
+  tls:
+    - secretName: keycloak-cert
+      hosts:
+        - keycloak.sau-portal.de
