--- a/keycloak.yaml
+++ b/keycloak.yaml
@@ -93,16 +93,19 @@ spec:
             - name: JAVA_OPTS_APPEND
               value: '-Djgroups.bind.address=$(POD_IP)'
             - name: 'KC_DB_URL_DATABASE'
-              value: 'keycloak'
+              value: 'appdb'
             - name: 'KC_DB_URL_HOST'
-              value: 'postgres'
+              value: 'postgres.db'
             - name: 'KC_DB'
               value: 'postgres'
             # In a production environment, use a secret to store username and password to the database
             - name: 'KC_DB_PASSWORD'
-              value: 'keycloak'
+              valueFrom:
+                secretKeyRef:
+                  name: keycloak-creds
+                  key: kc-dbpw
             - name: 'KC_DB_USERNAME'
-              value: 'keycloak'
+              value: 'ase-10'
           ports:
             - name: http
               containerPort: 8080
@@ -136,58 +139,58 @@ spec:
               mountPath: "/opt/keycloak/themes/"
               readOnly: true
 ---
-# This is deployment of PostgreSQL with an ephemeral storage for testing: Once the Pod stops, the data is lost.
-# For a production setup, replace it with a database setup that persists your data.
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: postgres
-  labels:
-    app: postgres
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: postgres
-  template:
-    metadata:
-      labels:
-        app: postgres
-    spec:
-      containers:
-        - name: postgres
-          image: mirror.gcr.io/postgres:17
-          env:
-            - name: POSTGRES_USER
-              value: "keycloak"
-            - name: POSTGRES_PASSWORD
-              value: "keycloak"
-            - name: POSTGRES_DB
-              value: "keycloak"
-            - name: POSTGRES_LOG_STATEMENT
-              value: "all"
-          ports:
-            - name: postgres
-              containerPort: 5432
-          volumeMounts:
-            # Using volume mount for PostgreSQL's data folder as it is otherwise not writable
-            - name: postgres-data
-              mountPath: /var/lib/postgresql
-      volumes:
-        - name: postgres-data
-          emptyDir: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: postgres
-  name: postgres
-spec:
-  selector:
-    app: postgres
-  ports:
-    - protocol: TCP
-      port: 5432
-      targetPort: 5432
-  type: ClusterIP
+# # This is deployment of PostgreSQL with an ephemeral storage for testing: Once the Pod stops, the data is lost.
+# # For a production setup, replace it with a database setup that persists your data.
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: postgres
+#   labels:
+#     app: postgres
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: postgres
+#   template:
+#     metadata:
+#       labels:
+#         app: postgres
+#     spec:
+#       containers:
+#         - name: postgres
+#           image: mirror.gcr.io/postgres:17
+#           env:
+#             - name: POSTGRES_USER
+#               value: "keycloak"
+#             - name: POSTGRES_PASSWORD
+#               value: "keycloak"
+#             - name: POSTGRES_DB
+#               value: "keycloak"
+#             - name: POSTGRES_LOG_STATEMENT
+#               value: "all"
+#           ports:
+#             - name: postgres
+#               containerPort: 5432
+#           volumeMounts:
+#             # Using volume mount for PostgreSQL's data folder as it is otherwise not writable
+#             - name: postgres-data
+#               mountPath: /var/lib/postgresql
+#       volumes:
+#         - name: postgres-data
+#           emptyDir: {}
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   labels:
+#     app: postgres
+#   name: postgres
+# spec:
+#   selector:
+#     app: postgres
+#   ports:
+#     - protocol: TCP
+#       port: 5432
+#       targetPort: 5432
+#   type: ClusterIP
